<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:paddingBottom="@dimen/activity_vertical_margin" >
	
		<Button
		    android:id="@+id/coloredButton"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/btn_default_colored"
		    android:text="@string/button_colored" />
	
		<Button
		    android:id="@+id/listPopupButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_default" />
	
		<Button
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:enabled="false"
		    android:text="@string/button_disabled" />
	
		<Button
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_small" />
	
		<Button
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_borderless" />
	
		<ImageButton
		    android:contentDescription="@string/button_image"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_launcher" />
	
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
			<ToggleButton
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" />
			<ToggleButton
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:enabled="false"
			    android:checked="false" />
			<ToggleButton
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:enabled="false"
			    android:checked="true" />
		</LinearLayout>
	
		<Button
		    style="?android:attr/buttonStyleInset"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_inset" />
	
	</LinearLayout>
</ScrollView>
