<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:paddingBottom="@dimen/activity_vertical_margin" >

        <!-- Number picker -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_picker_title" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_divider_thickness"
            android:background="?accentColorDarkDrawable"/>

        <com.negusoft.holoaccent.widget.AccentNumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Date picker -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_picker_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_divider_thickness"
            android:background="?accentColorDarkDrawable"/>

        <com.negusoft.holoaccent.widget.AccentDatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Time picker -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_picker_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_divider_thickness"
            android:background="?accentColorDarkDrawable"/>

        <com.negusoft.holoaccent.widget.AccentTimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
