<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- Inteterminate -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_indeterminate" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_divider_thickness"
            android:background="@drawable/background_accent" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <!-- Default -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/progress_default" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_divider_thickness"
            android:background="@drawable/background_accent" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="10" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="80" />

        <!-- SeekBars -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/progress_seekbars" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_divider_thickness"
            android:background="@drawable/background_accent" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="62" />

        <SeekBar
            android:id="@+id/myseekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:progress="48" />
    </LinearLayout>

</ScrollView>
